1998-06-22  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/Makefile.in, smtpserver/smtpserver.h,
	  smtpserver/libwhoson.c, smtpserver/whoson.h,
	  smtpserver/whosond.c:
	    Initial hooks/codes for "who-is-on" daemon.

	* include/splay.h, lib/pjwhash32.c, lib/symbol.c:
	    Created symbol-routines which handle arbitary
	    binary key values; key hashes are a bit simple-
	    minded, though...
	
	* scheduler/scheduler.c, man/scheduler.8:
	    Runtime option '-n' -- see the man-page.
	
	* include/policy.c, smtpserver/readpolicy.c,
	  smtpserver/policytest.c, smtpserver/policytest.h:
	    Added 'trustrecipients' attribute.

	* smtpserver/rfc821scn.c:
	    Additional texts to match several error cases that I keep
	    seeing around at SONERA's systems..

	* doc/guides/smtp-policy:
	    Updated the contents to match system a bit more

	* include/md5.h, include/md5-global.h, libc/md5c.c:
	    Included generic MD5 code into the ZMailer's libc.
	    To be used in a few server applications... (including
	    APOP-like session authentication for scheduler cmd
	    interface..)

1998-06-16  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    PATCHLEVEL 50-s6

	* configure.in, nearly all  Makefile.in  files:
	    Configure option:  --with-generic-include="-I/..."
	    which is added into ALL compilation statements

1998-06-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/policytest.c:
	    Moved "P_A_FullTrustNet" attribute recognition up a bit
	    so that "P_A_RelayCustNet" does not blank full_trust mode!

	* utils/policy-builder.sh.in:
	    Added another retrievable spam domain list

	* proto/cf/aliases.cf:
	    A fragment of script (in comment) which is specific for
	    listserv.funet.fi  system.

	* scheduler/msgerror.c:
	    When reporting "Multiple-fault:" type error, tell also
	    which template file is not openable, and ask the recipient
	    to report the case to the postmaster...

	* router/functions.c: