@@ -1,3 +1,10 @@
+1998-06-23  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* smtpserver/smtpcmds.c:
+	    A mistake in <postmaster@*> recipient policy
+	    analysis turned soft DNS error into hard policy
+	    rejection...  Outch.
+
 1998-06-22  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* smtpserver/Makefile.in, smtpserver/smtpserver.h,
